[package]
name = "rust_lambda_authorizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib/lib.rs"

[[bin]]
name = "lambda_auth_bootstrap"
path = "src/bin/lambda_auth_bootstrap.rs"

[[bin]]
name = "line_auth_bootstrap"
path = "src/bin/line_auth_bootstrap.rs"

[dependencies]
lambda = { package = "netlify_lambda", version = "0.2.0" }
lambda_runtime = "0.4.1"
tokio = "1.5.0"
reqwest = { version = "0.11", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }
serde = "1.0.125"
serde_derive = "1.0.125"
serde_json = "1.0.64"
log = "^0.4"
dotenv = "0.15.0"

[dev-dependencies]
pretty_assertions = "0.7.2"